new image 200kb try2

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
         ::-webkit-scrollbar-track { background: #0f172a; }
         ::-webkit-scrollbar-thumb { background: #334155; border-radius: 10px; }
 
-        /* Glowing Pulse Animation for Image */
+        /* Glowing Pulse Animation for image22 */
         @keyframes glow-pulse {
             0% { box-shadow: 0 0 5px rgba(99, 102, 241, 0.2), 0 0 10px rgba(99, 102, 241, 0.2); }
             50% { box-shadow: 0 0 20px rgba(99, 102, 241, 0.6), 0 0 40px rgba(99, 102, 241, 0.4); }
@@ -143,8 +143,8 @@
                 
                 <div class="relative p-2 rounded-full border border-white/10 glass-card">
 
-<!--image of kartikeya-->
-                    <img src="image.jpeg" alt="Kartikeya" 
+<!--image2 of kartikeya-->
+                    <img src="image2.jpeg" alt="Kartikeya" 
                          class="w-80 h-80 lg:w-[480px] lg:h-[480px] rounded-full object-cover 
                         opacity-100 group-hover:opacity-105 transition-all duration-700 
                         scale-100 group-hover:scale-105 animate-glow">
