contact info update

--- a/index.html
+++ b/index.html
@@ -289,13 +289,13 @@
                 <p class="text-slate-400 mb-8">Feel free to reach out for collaboration, internships, or learning opportunities.</p>
                 <div class="space-y-4">
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="mail" class="text-indigo-500"></i> your-email@gmail.com
+                        <i data-lucide="mail" class="text-indigo-500"></i> studykartik7@gmail.com
                     </div>
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="linkedin" class="text-indigo-500"></i> linkedin.com/in/yourprofile
+                        <i data-lucide="linkedin" class="text-indigo-500"></i> https://www.linkedin.com/in/kartikeyarev/
                     </div>
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="github" class="text-indigo-500"></i> github.com/yourusername
+                        <i data-lucide="github" class="text-indigo-500"></i> github.com/kartikeyarev
                     </div>
                 </div>
             </div>
