--- a/index.html
+++ b/index.html
@@ -112,8 +112,8 @@
     </div>
 </nav>
 
-    <section id="home" class="snap-start snap-always reveal min-h-screen flex items-center justify-center px-6 lg:px-12 overflow-hidden relative">
-    <div class="max-w-6xl mx-auto w-full grid lg:grid-cols-2 gap-10 items-center">
+    <section id="home" class="snap-start snap-always reveal min-h-screen flex items-center justify-center pt-24 px-6 lg:px-12 overflow-hidden">
+    <div class="max-w-6xl mx-auto w-full grid lg:grid-cols-2 gap-12 items-center">
         
         <div class="order-2 lg:order-1 text-center lg:text-left">
             <div class="inline-block px-4 py-1.5 mb-6 text-[10px] font-bold tracking-[0.2em] text-indigo-400 uppercase bg-indigo-500/10 border border-indigo-500/20 rounded-lg">
