--- a/index.html
+++ b/index.html
@@ -83,8 +83,9 @@
 </head>
 <body class="bg-slate-950 text-slate-100 font-sans selection:bg-indigo-500/30">
     <div class="fixed inset-0 -z-50 overflow-hidden pointer-events-none">
-        <div class="absolute -top-[20%] -left-[10%] w-[50vw] h-[50vw] bg-indigo-600/20 rounded-full blur-[120px] opacity-50 mix-blend-screen animate-pulse"></div>
-        <div class="absolute -bottom-[20%] -right-[10%] w-[50vw] h-[50vw] bg-purple-600/20 rounded-full blur-[120px] opacity-50 mix-blend-screen animate-pulse"></div>
+        <div class="absolute -top-[20%] -left-[10%] w-[50vw] h-[50vw] bg-indigo-600/20 rounded-full blur-[120px] opacity-50 mix-blend-screen lg:animate-pulse"></div>
+        
+        <div class="absolute -bottom-[20%] -right-[10%] w-[50vw] h-[50vw] bg-purple-600/20 rounded-full blur-[120px] opacity-50 mix-blend-screen lg:animate-pulse"></div>
     </div>
     
     <nav id="navbar" class="glass-nav fixed w-full z-50 top-0 left-0">
@@ -149,7 +150,7 @@
                     <img src="image2.jpeg" alt="Kartikeya" 
                          class="w-80 h-80 lg:w-[480px] lg:h-[480px] rounded-full object-cover 
                         opacity-100 group-hover:opacity-105 transition-all duration-700 
-                        scale-100 group-hover:scale-105 animate-glow">
+                        scale-100 group-hover:scale-105 lg:animate-glow">
                 </div>
             </div>
         </div>
