--- a/index.html
+++ b/index.html
@@ -304,7 +304,7 @@
                 </div>
             </div>
 
-            <form action="https://formspree.io/f/xvgzlowy" method="POST" class="space-y-4 mt-8 lg:mt-0">
+            <form action="https://formspree.io/f/mykwggwg" method="POST" class="space-y-4 mt-8 lg:mt-0">
                 <input type="text" name="name" placeholder="Name" 
                     class="w-full bg-slate-950 border border-slate-800 p-4 rounded-xl focus:ring-2 ring-indigo-500 outline-none transition-all" 
                     required>
