--- a/index.html
+++ b/index.html
@@ -148,9 +148,9 @@
 
 <!--image2 of kartikeya-->
                     <img src="image2.jpeg" alt="Kartikeya" 
-                         class="w-80 h-80 lg:w-[480px] lg:h-[480px] rounded-full object-cover 
-                        opacity-100 group-hover:opacity-105 transition-all duration-700 
-                        scale-100 group-hover:scale-105 lg:animate-glow">
+                         class="w-80 h-80 lg:w-[480px] lg:h-[480px] rounded-full lg:object-cover 
+                        opacity-100 lg:group-hover:opacity-105 transition-all duration-700 
+                        scale-100 lg:group-hover:scale-105 lg:animate-glow">
                 </div>
             </div>
         </div>
