links live + icon added

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kartikeya | Portfolio</title>
+     <link rel="icon" type="image/x-icon" href="image2.jpeg">
     <script src="https://cdn.tailwindcss.com"></script>
     <script src="https://unpkg.com/lucide@latest"></script>
     <style>
@@ -293,13 +294,13 @@
                 <p class="text-slate-400 mb-8">Feel free to reach out for collaboration, internships, or learning opportunities.</p>
                 <div class="space-y-4">
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="mail" class="text-indigo-500"></i> studykartik7@gmail.com
+                        <i data-lucide="mail" class="text-indigo-500"></i><a href="mailto:studykartik7@gmail.com " class="ml-2 text-indigo-400 hover:underline">studykartik7@gmail.com</a>
                     </div>
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="linkedin" class="text-indigo-500"></i> linkedin.com/in/kartikeyarev
+                        <i data-lucide="linkedin" class="text-indigo-500"></i><a href="https://www.linkedin.com/in/kartikeyarev/" class="ml-2 text-indigo-400 hover:underline">linkedin.com/in/kartikeyarev/</a>
                     </div>
                     <div class="flex items-center gap-4 text-slate-300">
-                        <i data-lucide="github" class="text-indigo-500"></i> github.com/kartikeyarev
+                        <i data-lucide="github" class="text-indigo-500"></i><a href="https://github.com/kartikeyarev" class="ml-2 text-indigo-400 hover:underline">github.com/kartikeyarev</a>
                     </div>
                 </div>
             </div>
