--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
             KARTIK<span class="text-white">EYA</span>
         </span>
 
-        <div class="hidden lg:flex items-center space-x-8 font-medium text-slate-400 text-base">
+        <div class="hidden lg:flex items-center space-x-8 font-medium text-slate-400 text-sm">
             <a href="#home" class="hover:text-indigo-400 transition-colors">Home</a>
             <a href="#about" class="hover:text-indigo-400 transition-colors">About</a>
             <a href="#skills" class="hover:text-indigo-400 transition-colors">Skills</a>
